--- a/mta.yaml
+++ b/mta.yaml
@@ -1,5 +1,5 @@
 ID: partsAvailability
-_schema-version: '3.1'
+_schema-version: '2.1'
 description: 'partsAvailability Application MTA '
 version: 0.0.1
 modules:
@@ -7,15 +7,14 @@ modules:
    type: nodejs
    path: partsAvailability_node
    parameters:
-      host: partsAvailability_node
+      host: QAS-partsAvailability_node
       register-service-url: true
-      service-name: partsAvailability_node
+      service-name: QAS-partsAvailability_node
       service-url: '${default-url}'
       disk-quota: 256MB
       memory: 256MB
    provides:
-    - name: partsAvailability_node_api 
-      public: false
+    - name: partsAvailability_node_api
       properties:
          url: '${default-url}'
    requires:
@@ -26,9 +25,9 @@ modules:
    type: html5
    path: partsAvailability
    parameters:
-      host: partsAvailability
+      host: QAS-partsAvailability
       register-service-url: true
-      service-name: partsAvailability
+      service-name: QAS-partsAvailability
       service-url: '${default-url}'
       disk-quota: 256M
       memory: 256M
@@ -36,7 +35,7 @@ modules:
       builder: grunt
    requires:
     - name: uaa_partsAvailability
-    - name: dest_partsAvailability
+    - name: dest_qas_partsAvailability
     - name: partsAvailability_node_api
       group: destinations
       properties:
@@ -46,7 +45,6 @@ modules:
    
    provides:
     - name: partsAvailability
-
  
 resources:
  - name: uaa_partsAvailability
@@ -63,7 +61,7 @@ resources:
    properties:
      odata-call-service-name: '${service-name}'
 
- - name: dest_partsAvailability
+ - name: dest_qas_partsAvailability
    parameters:
       service-plan: lite
       service: destination
