--- a/partsAvailability/xs-app.json
+++ b/partsAvailability/xs-app.json
@@ -35,7 +35,12 @@
 		{
 		"source": "/userDetails/(.*)",
 		"destination": "parts-node-backend"
+	},
+		{
+		"source": "/forPartsOrdering/(.*)",
+		"destination": "parts-node-backend"
 	}	
+
 
 	]
 }
