--- a/mta.yaml
+++ b/mta.yaml
@@ -7,7 +7,7 @@ modules:
    type: nodejs
    path: partsAvailability_node
    parameters:
-      host: qas_partsAvailability_node
+      host: partsAvailability_node
       register-service-url: true
       service-name: partsAvailability_node
       service-url: '${default-url}'
@@ -26,7 +26,7 @@ modules:
    type: html5
    path: partsAvailability
    parameters:
-      host: qas_partsAvailability
+      host: partsAvailability
       register-service-url: true
       service-name: partsAvailability
       service-url: '${default-url}'
@@ -36,7 +36,7 @@ modules:
       builder: grunt
    requires:
     - name: uaa_partsAvailability
-    - name: qas_dest_partsAvailability
+    - name: dest_partsAvailability
     - name: partsAvailability_node_api
       group: destinations
       properties:
@@ -63,7 +63,7 @@ resources:
    properties:
      odata-call-service-name: '${service-name}'
 
- - name: qas_dest_partsAvailability
+ - name: dest_partsAvailability
    parameters:
       service-plan: lite
       service: destination
