--- a/mta.yaml
+++ b/mta.yaml
@@ -9,12 +9,18 @@ modules:
    path: partsAvailability_node
    parameters:
       host: tci-dev-partsavailability-node
-      disk-quota: 256MB
-      memory: 256MB
+      disk-quota: 256M
+      memory: 256M
+   properties:
+      XS_APP_LOG_LEVEL: info
+      XS_LOG_USER: true
+      XS_LOG_REFERER: true
+      XS_LOG_CONNECTION_DATA: true
+      NODE_TLS_REJECT_UNAUTHORIZED: 0
    provides:
     - name: partsAvailability_node_api
       properties:
-         url: '${default-url}'
+         url: ${default-url}
    requires:
     - name: application-logs_partsAvailability
     - name: uaa_partsAvailability
@@ -27,6 +33,8 @@ modules:
       host: tci-dev-partsavailability
       disk-quota: 256M
       memory: 512M
+   properties:
+      XS_APP_LOG_LEVEL: info
    build-parameters:
       builder: grunt
    requires:
