--- a/partsAvailability_node/package.json
+++ b/partsAvailability_node/package.json
@@ -1,35 +1,27 @@
 {
-  "dependencies": {
-   	"@sap/xsenv": "1.2.9",
-	"@sap/xssec": "2.1.10",
-	"@sap/hdbext": "4.3.4",
-	"@sap/textbundle": "2.1.0",
-	"@sap/logging": "^3.3.1",
-	"@sap/jobs-client": "1.1.1",
-	"passport": "0.3.2",
-	"express": "4.12.3",
-    "request": "",
-	"async": "2.5.0",
-	"ws": "1.1.4"
-  },
-  "description": "Node Module for Test",
-  "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-replace": "0.5.4",
-    "jasmine-reporters": "2.1.1",
-    "gulp-jasmine": "2.4.1",
-    "gulp-istanbul": "1.1.1"
-  },
-  "files": [],
-  "main": "server.js",
-  "name": "qas_partsAvailability_Node",
-  "scripts": {
-    "start": "node server.js",
-    "test": "node ./node_modules/gulp/bin/gulp test",
-    "test-coverage": "node ./node_modules/gulp/bin/gulp test-coverage"
-  },
-  "engines": {
-    "node": "8.x"
-  },
-  "version": "1.0.0"
+	"dependencies": {
+		"@sap/logging": "^4.1.0",
+		"@sap/xsenv": "^1.3.0",
+		"@sap/xssec": "^2.1.16",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
+		"passport": "^0.4.0"
+	},
+	"description": "Node.js module for parts availability consolidated app",
+	"devDependencies": {
+		"jest": "^24.1.0",
+		"jest-junit": "^6.3.0"
+	},
+	"files": [],
+	"main": "server.js",
+	"name": "pipelineInventory_node",
+	"scripts": {
+		"test": "node node_modules/jest/bin/jest --config jest.json",
+		"test-coverage": "node node_modules/jest/bin/jest --coverage --config jest.json",
+		"start": "node server.js"
+	},
+	"engines": {
+		"node": "8.x"
+	},
+	"version": "1.0.0"
 }
