--- a/partsAvailability/package.json
+++ b/partsAvailability/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"description": "",
 	"devDependencies": {
-		"@sap/grunt-sapui5module-bestpractice-build": "^0.0.14"
+		"@sap/grunt-sapui5-bestpractice-build": "1.3.65",
+		"grunt-shell": "^3.0.1"
 	},
 	"dependencies": {
 		"@sap/approuter": "5.13.0"
